--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,4 @@
 <% @posts.each do |post| %>
-  <div><%= link_to post.title, "/posts/#{post.id}"%>>/div>
+  <div><%= link_to post.title, post_path(post)%></div>
     <%= post.title %></div>
 <% end %>
